--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
                 "SCENARIO_UID": "audi-dc-iso2",
             },
             "args": [
-                "-vv",
+                "-v",
                 "--monitoring",
                 "--trap-faults=0",
                 "--config=afb-evse/etc/binding-simu15118-evse.yaml",
@@ -93,6 +93,7 @@
                 "IFACE_SIMU": "evcc-veth",
                 "PKI_TLS_DIR": "./afb-test/certs",
                 "SIMULATION_MODE": "injector",
+                "SCENARIO_AUTORUN": "1",
             },
             "args": [
                 "-v",
@@ -108,7 +109,7 @@
             ]
         },
         {
-            "name": "evcc-full-15118",
+            "name": "evcc-autorun-scenario-fx",
             "type": "lldb",
             "preLaunchTask": "binding-native-build",
             "request": "launch",
@@ -119,13 +120,45 @@
                 "IFACE_SIMU": "evcc-veth",
                 "PKI_TLS_DIR": "./afb-test/certs",
                 "SIMULATION_MODE": "injector",
+                "SCENARIO_AUTORUN": "1",
             },
             "args": [
                 "-v",
+                // "--traceapi=common",
+                "--jobs-max=64000",
                 "--monitoring",
                 "--trap-faults=0",
                 "--config=afb-evcc/etc/binding-simu15118-evcc.yaml",
-                "--config=afb-test/etc/audi-dc-iso2-full.json",
+                "--config=afb-test/etc/_autorun-scenario.json",
+            ],
+            "cwd": "${workspaceFolder}",
+            "initCommands": [
+                "target stop-hook add -n _start -o continue",
+                "settings set target.disable-aslr false"
+            ]
+        },
+        {
+            "name": "evse-autorun-scenario-fx",
+            "type": "lldb",
+            "preLaunchTask": "binding-native-build",
+            "request": "launch",
+            "program": "afb-binder",
+            "env": {
+                "CARGO_BINDING_DIR": "${env:CARGO_TARGET_DIR}debug",
+                "LD_LIBRARY_PATH": "/usr/local/lib64",
+                "IFACE_SIMU": "evse-veth",
+                "PKI_TLS_DIR": "./afb-test/certs",
+                "SIMULATION_MODE": "responder",
+                "SCENARIO_UID": "debug",
+            },
+            "args": [
+                "-vv",
+                // "--traceapi=common",
+                "--jobs-max=64000",
+                "--monitoring",
+                "--trap-faults=0",
+                "--config=afb-evse/etc/binding-simu15118-evse.yaml",
+                "--config=afb-test/etc/_autorun-scenario.json",
             ],
             "cwd": "${workspaceFolder}",
             "initCommands": [
@@ -247,6 +280,27 @@
             "args": [
                 "--pcap_in=./afb-test/trace-logs/tesla-3-din.pcap",
                 "--json_out=./afb-test/etc/tesla-3-din.json",
+                "--compact=true",
+                "--verbose=0",
+            ],
+            "cwd": "${workspaceFolder}",
+            "initCommands": [
+                "target stop-hook add -n _start -o continue",
+                "settings set target.disable-aslr false"
+            ]
+        },
+        {
+            "name": "pcap-iso2-porshe-compact",
+            "type": "lldb",
+            "preLaunchTask": "binding-native-build",
+            "request": "launch",
+            "program": "${env:HOME}/.cargo/build/debug/pcap-iso15118",
+            "env": {
+                "LD_LIBRARY_PATH": "/usr/local/lib64:/usr/local/lib",
+            },
+            "args": [
+                "--pcap_in=./afb-test/_trace-logs/Porsche/Taycan_4S/iso-15118-2-AC/2023-04-11T09:44:27.990Z-taycan-iso-ac-driverside/ethernet-traffic.dump",
+                "--json_out=./afb-test/etc/_porshe-taycan4s-iso2.json",
                 "--compact=true",
                 "--verbose=0",
             ],
