--- a/oci-15118/Dockerfile_afb-iso15118_almalinux
+++ b/oci-15118/Dockerfile_afb-iso15118_almalinux
@@ -19,9 +19,8 @@ gpgcheck=1
 gpgkey=https://download.redpesk.bzh/redpesk-lts/batz-2.0-update/sdk-third-party//AlmaLinux_9/repodata/repomd.xml.key
 AEOF
 
-microdnf  --nodocs -y install sudo iproute procps-ng ncurses
+microdnf  --nodocs -y install sudo iproute
 microdnf --nodocs --refresh -y install iso15118-simulator-rs-test
 microdnf clean all
-
 EOF
 
